# Java

./: UFO_Sightings.js  app.js
financial-planning-agent/: .gitignore  CLAUDE.md  README.md  STRATEGY.md  pyproject.toml  tasks.md
financial-planning-agent/.claude/workflows/: financial-experts-gate.js
financial-planning-agent/.github/workflows/: ci.yml
financial-planning-agent/cli/: foo_plan.py
financial-planning-agent/examples/: branding.example.yaml  scenario_retire_at_67.json
financial-planning-agent/foo_agent/: __init__.py  version.py
financial-planning-agent/foo_agent/agents/: copilot.py  engine_tools.py  llm.py
financial-planning-agent/research/: legal_validate.py  source_rules.py  syndicate.py  verify_assumptions.py  verify_rules.py
financial-planning-agent/rubrics/: C00.yaml  C01.yaml  C02.yaml  C03.yaml  C04.yaml  C05.yaml  C06.yaml  C07.yaml  C08.yaml  C09.yaml  C10.yaml  C11.yaml  C12.yaml  _template.yaml
financial-planning-agent/tests/: _golden_util.py  conftest.py  test_agents.py  test_assumption_citations.py  test_buckets.py  test_calculators.py  test_condition_dsl.py  test_correctness.py  test_decumulation_proj.py  test_determinism.py  test_doc_consistency.py  test_engine_integration.py  test_estate.py  test_golden.py  test_ingest.py  test_montecarlo_repro.py  test_no_clock.py  test_optimizers.py  test_pdf_repro.py  test_proposed.py  test_risk.py  test_scope_fence.py  test_tax_oracle.py  test_web_app.py  test_workflow.py
financial-planning-agent/tools/: scope_fence.py
financial-planning-agent/web/: app.py  index.html
(+161 files in other folders)
