[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foo-agent"
version = "0.1.0"
description = "Deterministic, advisor-grade financial planning agent (Financial Order of Operations engine)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Brian Bonewitz" }]

# Pinned for determinism. The decision path depends only on numpy (seeded),
# pyyaml + jsonschema (load/validate). Reporting adds jinja2/matplotlib/weasyprint.
dependencies = [
    "numpy>=1.26,<3",
    "pyyaml>=6,<7",
    "jsonschema>=4.20,<5",
    "jinja2>=3.1,<4",
    "matplotlib>=3.8,<4",
    "weasyprint>=60",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]

[project.scripts]
foo-plan = "cli.foo_plan:main"

[tool.setuptools]
packages = ["foo_agent", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
